--- a/windsurf_deployment.yaml
+++ b/windsurf_deployment.yaml
@@ -3,4 +3,4 @@
 # The ID of the project (different from project name) on the provider's system. This is populated as a way to update existing deployments.
 project_id: 9b38b5be-239e-4e57-91cf-d90cc86118b0
 # The framework of the web application (examples: nextjs, react, vue, etc.)
-framework: eleventy
+framework: react
